--- a/app/src/main/res/layout/fragment_edit_store.xml
+++ b/app/src/main/res/layout/fragment_edit_store.xml
@@ -22,8 +22,7 @@
             app:counterMaxLength="@integer/counter_max_name"
             app:endIconMode="clear_text"
             app:helperText="@string/helper_required"
-app:startIconDrawable="@drawable/store"
-            >
+            app:startIconDrawable="@drawable/store">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etName"
@@ -32,6 +31,48 @@ app:startIconDrawable="@drawable/store"
                 android:inputType="textCapWords"
                 android:maxLength="@integer/counter_max_name" />
 
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tilPhone"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/common_padding_default"
+
+            android:hint="@string/hint_phone"
+            app:endIconMode="clear_text"
+            app:helperText="@string/helper_required"
+            app:startIconDrawable="@drawable/phone">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etPhone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="phone"
+                android:maxLength="@integer/counter_max_phone" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/common_padding_default"
+            android:hint="@string/hint_website"
+            app:counterMaxLength="@integer/counter_max_name"
+            app:endIconMode="clear_text"
+            app:startIconDrawable="@drawable/link">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etWebsite"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textMultiLine"
+                android:maxLines="@integer/liner_url_website"
+                android:minLines="@integer/liner_url_website"
+                android:textAppearance="?attr/textAppearanceCaption"
+                android:textColor="@color/color_link"
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
