--- a/app/src/main/res/layout/fragment_edit_store.xml
+++ b/app/src/main/res/layout/fragment_edit_store.xml
@@ -69,10 +69,47 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textMultiLine"
-                android:maxLines="@integer/liner_url_website"
-                android:minLines="@integer/liner_url_website"
+                android:maxLines="@integer/lines_url_website"
+                android:minLines="@integer/lines_url_website"
                 android:textAppearance="?attr/textAppearanceCaption"
-                android:textColor="@color/color_link"/>
+                android:textColor="@color/color_link" />
         </com.google.android.material.textfield.TextInputLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/common_padding_default"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="0dp"
+            android:hint="@string/url_img"
+            app:endIconMode="clear_text"
+            app:startIconDrawable="@drawable/link"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etPhotoUrl"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textMultiLine"
+                android:maxLines="@integer/lines_url_photo"
+                android:minLines="@integer/lines_url_photo"
+                android:textAppearance="?attr/textAppearanceCaption"
+                android:textColor="@color/color_link" />
+
+            <ImageView
+                android:id="@+id/imgPhoto"
+                android:layout_marginStart="@dimen/common_padding_default"
+                android:layout_width="@dimen/photo_size_thumb"
+                android:layout_height="@dimen/photo_size_thumb"
+                android:contentDescription="@string/description_img_photo"
+                android:src="@drawable/image" />
+        </com.google.android.material.textfield.TextInputLayout>
+
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
