--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="card_height">56dp</dimen>
     <dimen name="common_padding_default">16dp</dimen>
     <dimen name="common_padding_min">8dp</dimen>
+    <dimen name="photo_size_thumb">88dp</dimen>
 </resources>
