--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -2,5 +2,8 @@
 <resources>
     <integer name="counter_max_name">18</integer>
     <integer name="counter_max_phone">13</integer>
-    <integer name="liner_url_website">2</integer>
+    <integer name="lines_url_website">2</integer>
+    <integer name="lines_min_lines">4</integer>
+    <integer name="lines_max_lines">4</integer>
+    <integer name="lines_url_photo">4</integer>
 </resources>
