--- a/app/src/main/res/layout/fragment_edit_store.xml
+++ b/app/src/main/res/layout/fragment_edit_store.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     tools:context=".EditStoreFragment">
 
     <LinearLayout
@@ -12,104 +13,112 @@
         android:orientation="vertical"
         android:padding="@dimen/common_padding_default">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tilName"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/hint_name"
-            app:counterEnabled="true"
-            app:counterMaxLength="@integer/counter_max_name"
-            app:endIconMode="clear_text"
-            app:helperText="@string/helper_required"
-            app:startIconDrawable="@drawable/store">
+            android:orientation="vertical">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etName"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilName"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textCapWords"
-                android:maxLength="@integer/counter_max_name" />
+                android:hint="@string/hint_name"
+                app:counterEnabled="true"
+                app:counterMaxLength="@integer/counter_max_name"
+                app:endIconMode="clear_text"
+                app:helperText="@string/helper_required"
+                app:startIconDrawable="@drawable/store">
 
-        </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textCapWords"
+                    android:maxLength="@integer/counter_max_name" />
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tilPhone"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilPhone"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/common_padding_default"
+
+                android:hint="@string/hint_phone"
+                app:endIconMode="clear_text"
+                app:helperText="@string/helper_required"
+                app:startIconDrawable="@drawable/phone">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etPhone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="phone"
+                    android:maxLength="@integer/counter_max_phone" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/common_padding_default"
+                android:hint="@string/hint_website"
+                app:counterMaxLength="@integer/counter_max_name"
+                app:endIconMode="clear_text"
+                app:startIconDrawable="@drawable/link">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etWebsite"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textMultiLine"
+                    android:maxLines="@integer/lines_url_website"
+                    android:minLines="@integer/lines_url_website"
+                    android:textAppearance="?attr/textAppearanceCaption"
+                    android:textColor="@color/color_link" />
+            </com.google.android.material.textfield.TextInputLayout>
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/common_padding_default"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
-            android:hint="@string/hint_phone"
-            app:endIconMode="clear_text"
-            app:helperText="@string/helper_required"
-            app:startIconDrawable="@drawable/phone">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etPhone"
-                android:layout_width="match_parent"
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:inputType="phone"
-                android:maxLength="@integer/counter_max_phone" />
+                android:layout_weight="1"
+                android:hint="@string/url_img"
+                app:endIconMode="clear_text"
+                app:startIconDrawable="@drawable/link">
 
-        </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etPhotoUrl"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textMultiLine"
+                    android:maxLines="@integer/lines_url_photo"
+                    android:minLines="@integer/lines_url_photo"
+                    android:textAppearance="?attr/textAppearanceCaption"
+                    android:textColor="@color/color_link" />
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/common_padding_default"
-            android:hint="@string/hint_website"
-            app:counterMaxLength="@integer/counter_max_name"
-            app:endIconMode="clear_text"
-            app:startIconDrawable="@drawable/link">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etWebsite"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textMultiLine"
-                android:maxLines="@integer/lines_url_website"
-                android:minLines="@integer/lines_url_website"
-                android:textAppearance="?attr/textAppearanceCaption"
-                android:textColor="@color/color_link" />
-        </com.google.android.material.textfield.TextInputLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/common_padding_default"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="0dp"
-            android:hint="@string/url_img"
-            app:endIconMode="clear_text"
-            app:startIconDrawable="@drawable/link"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etPhotoUrl"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textMultiLine"
-                android:maxLines="@integer/lines_url_photo"
-                android:minLines="@integer/lines_url_photo"
-                android:textAppearance="?attr/textAppearanceCaption"
-                android:textColor="@color/color_link" />
-
+            </com.google.android.material.textfield.TextInputLayout>
             <ImageView
                 android:id="@+id/imgPhoto"
-                android:layout_marginStart="@dimen/common_padding_default"
                 android:layout_width="@dimen/photo_size_thumb"
                 android:layout_height="@dimen/photo_size_thumb"
+                android:layout_marginStart="@dimen/common_padding_default"
                 android:contentDescription="@string/description_img_photo"
                 android:src="@drawable/image" />
-        </com.google.android.material.textfield.TextInputLayout>
 
+        </LinearLayout>
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
