--- a/app/src/main/res/values/array_options_item.xml
+++ b/app/src/main/res/values/array_options_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="array_options_item">
-        <item>Eliminar</item>
-        <item>Llamar</item>
-        <item>Ir al sitio web</item>
+        <item>@string/eliminar</item>
+        <item>@string/llamar</item>
+        <item>@string/ir</item>
     </string-array>
 </resources>
