--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:clipToPadding="false"
-        android:paddingBottom="@dimen/common_padding_default"
+        android:paddingBottom="@dimen/common_padding_min"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:paddingStart="0dp"
+        android:paddingEnd="@dimen/common_padding_min"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
